Fixed alignments in Reviews dialog

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -74,6 +74,13 @@ body {
   top:-9999px !important;
   left:-9999px !important;
 }
+.ownerRatingReview, .petRatingReview{
+  display:inline-block;
+  vertical-align:top;
+}
+.rating-star{
+  cursor:pointer;
+}
 /*.switch{
   display:inline-block;
   padding-left:5px;
